<resources>
    <string name="app_name">ERP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="dashboard_yarn_purchase">Yarn purchase</string>
    <string name="dashboard_knitting_program">Knitting program</string>
    <string name="dashboard_grey_fabric_stock">Grey fabric stock</string>
    <string name="dashboard_dying_program">Dying program</string>
    <string name="dashboard_dyed_fabric">Dyed fabric</string>
    <string name="dashboard_cutting">Cutting</string>
    <string name="dashboard_fusing">Fusing</string>
    <string name="dashboard_stitching">Stitching</string>
    <string name="dashboard_checking">Checking</string>
    <string name="dashboard_iron_Pack">Iron &amp; Pack</string>
    <string name="dashboard_shipment_ready">Shipment ready</string>

    <string name="add_new">Add new</string>

    <string name="search">Search</string>
    <string name="calculate_shortage">Calculate Shortage</string>

    <string name="invoice_no">Invoice No.</string>
    <string name="date">Date</string>
    <string name="spinning_mill">Spinning Mill</string>
    <string name="yarn_purchase_mill_name">Mill Name</string>
    <string name="goods_desc">Goods Description</string>
    <string name="description">Description</string>
    <string name="no_of_bags">No. of bags</string>
    <string name="qty_in_kgs">Qty in Kgs</string>
    <string name="available_qty_in_kgs">Available Qty in Kgs:</string>
    <string name="rate">Rate</string>
    <string name="gst">G.S.T %</string>
    <string name="price">Price</string>
    <string name="yarn_purchase_price_hint">(Quantity in Kg * Rate) + GST</string>
    <string name="lot_track_name">Lot track name</string>
    <string name="save">Save</string>
    <string name="yarn_purchase_saved_successfully">Yarn stock saved successfully</string>
    <string name="error">Error</string>


    <string name="SRKW_DC_no">SRKW D.C.No</string>
    <string name="order_ref_no">Order Ref</string>
    <string name="fabric_structure">Fabric structure</string>
    <string name="machine_gage">Machine gage</string>
    <string name="loop_length">Loop length</string>
    <string name="dia">Dia</string>
    <string name="knitting_saved_successfully">Knitting program added successfully</string>

    <string name="knitting_DC_no">Knitting D.C.No</string>
    <string name="programmed_qty">Programmed Qty in Kgs</string>
    <string name="remaining_qty">Remaining Qty in Kgs</string>
    <string name="received_qty_kgs">Received Qty in Kgs</string>
    <string name="shortage">Shortage in Kgs</string>
    <string name="shortage_percent">Shortage %</string>
    <string name="grey_fabric_saved_successfully">Grey fabric details added successfully</string>

    <string name="dyeing_unit">Dyeing unit</string>
    <string name="order_no">Order no</string>
    <string name="color">Color</string>
    <string name="shade">Shade</string>
    <string name="lot">Lot</string>
</resources>