<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="constant"
            type="com.software.erp.common.customviews.CustomAttributes" />

        <variable
            name="viewModel"
            type="com.software.erp.view.dyeing.DyeingDetailsViewModel" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.dyeingSRKWDCNo}"
                app:title="@string/SRKW_DC_no" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.date}"
                app:title="@string/date"
                app:type="@{constant.DATE}" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.dyeingUnitName}"
                app:title="@string/dyeing_unit" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.orderNo}"
                app:title="@string/order_no" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.color}"
                app:title="@string/color" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.shade}"
                app:title="@string/shade" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                android:text="@={viewModel.dyingDetailsPOLiveData.lot}"
                app:title="@string/lot" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/spinning_mill" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/goods_desc" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/fabric_structure" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/machine_gage" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/loop_length" />

            <com.software.erp.common.customviews.CustomSpinnerBox
                style="@style/custom_spinner_box"
                app:spinnerList="@{viewModel.spinningMillListLiveData}"
                app:spinnerSelection="@{viewModel.spinningMillSelectionListener}"
                app:title="@string/dia" />

            <com.software.erp.common.customviews.CustomInputBox
                style="@style/custom_input_box"
                app:title="@string/qty_in_kgs" />

            <com.software.erp.common.customviews.CustomTextBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin" />

            <com.software.erp.common.customviews.CustomButton
                style="@style/button_style_full"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginBottom="50dp"
                android:onClick="@{() -> viewModel.onSubmitClick()}"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</layout>