<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="constant"
            type="com.software.erp.common.customviews.CustomAttributes" />

        <variable
            name="viewModel"
            type="com.software.erp.view.greyfabric.GreyFabricDetailsViewModel" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">

            <com.software.erp.common.customviews.CustomInputBox
                android:id="@+id/mIBKnittingDCNo"
                style="@style/custom_input_box"
                android:text="@={viewModel.greyFabricDetailsPOLiveData.knittingCompanyDCNo}"
                app:title="@string/knitting_DC_no" />

            <com.software.erp.common.customviews.CustomInputBox
                android:id="@+id/mIBSRKWNo"
                style="@style/custom_input_box"
                android:layout_below="@+id/mIBKnittingDCNo"
                android:layout_toStartOf="@+id/mBTGreyFabricDCNoSearch"
                android:text="@={viewModel.greyFabricDetailsPOLiveData.knittingProgramSRKWDCNo}"
                app:title="@string/SRKW_DC_no" />

            <com.software.erp.common.customviews.CustomButton
                android:id="@+id/mBTGreyFabricDCNoSearch"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mIBKnittingDCNo"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/side_margin"
                android:onClick="@{() -> viewModel.onKnittingDCSearchClick()}"
                android:text="@string/search" />

            <LinearLayout
                android:id="@+id/mLLGreyFabricDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mIBSRKWNo"
                android:orientation="vertical"
                android:visibility="@{viewModel.greyFabricDetailsPOLiveData.showKnittingDetails}">

                <com.software.erp.common.customviews.CustomTextBox
                    android:id="@+id/mCTGreyFabricDate"
                    style="@style/custom_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/date"
                    app:value="@{viewModel.greyFabricDetailsPOLiveData.date}" />

                <com.software.erp.common.customviews.CustomTextBox
                    android:id="@+id/mCTGreyFabricOrderRef"
                    style="@style/custom_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/order_ref_no"
                    app:value="@{viewModel.greyFabricDetailsPOLiveData.orderRefNo}" />

                <com.software.erp.common.customviews.CustomTextBox
                    android:id="@+id/mCTGreyFabricDesc"
                    style="@style/custom_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/description"
                    app:value="@{viewModel.greyFabricDetailsPOLiveData.goodsDesc}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRVGreyFabricStructure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.software.erp.common.customviews.CustomButton
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:onClick="@{() -> viewModel.onCalculateShortageClick()}"
                    android:text="@string/calculate_shortage" />

            </LinearLayout>

            <com.software.erp.common.customviews.CustomButton
                style="@style/button_style_full"
                android:layout_below="@+id/mLLGreyFabricDetails"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginBottom="50dp"
                android:onClick="@{() -> viewModel.onSubmitClick()}"
                android:text="@string/save"
                android:visibility="@{viewModel.greyFabricDetailsPOLiveData.showShortageDetails}" />
        </RelativeLayout>
    </ScrollView>
</layout>