<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="constant"
            type="com.software.erp.common.customviews.CustomAttributes" />

        <variable
            name="fabricStructurePO"
            type="com.software.erp.view.greyfabric.GreyFabricStructurePO" />

        <variable
            name="fabricStructureList"
            type="java.util.List&lt;String>" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mLLCustomInputParenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/fabric_structure_bg"
        android:orientation="vertical"
        android:padding="1dp">

        <com.software.erp.common.customviews.CustomSpinnerBox
            android:id="@+id/mSBFabricStructure"
            style="@style/custom_spinner_box"
            android:clickable="false"
            app:spinnerList="@{fabricStructureList}"
            app:title="@string/fabric_structure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.software.erp.common.customviews.CustomInputBox
                android:id="@+id/mIBKnittingGage"
                style="@style/custom_input_box"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@={fabricStructurePO.machineGage}"
                app:title="@string/machine_gage"
                app:type="@{constant.NON_EDITABLE}" />

            <com.software.erp.common.customviews.CustomInputBox
                android:id="@+id/mIBKnittingLoopLength"
                style="@style/custom_input_box"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@={fabricStructurePO.loopLength}"
                app:title="@string/loop_length"
                app:type="@{constant.NON_EDITABLE}" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRVKnittingFabricStructureDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <com.software.erp.common.customviews.CustomTextView
            android:id="@+id/mTVKnittingDiaAdd"
            style="@style/text_link_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/dia" />

    </LinearLayout>
</layout>